# itertools

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  conanfile.txt
include/: detail.h  enumerate.h  itertools.h  macros.h  range.h  zip.h
include/itertools/: count.h  cycle.h  detail.h  enumerate.h  filter.h  macros.h  map.h  range.h  repeat.h  version.h  zip.h
local/: log.txt
misc/: appveyorBuildConfigurationScript.bat  installCatch2.bat
test/: test_compose.cpp  test_count.cpp  test_cycle.cpp  test_enumerate.cpp  test_filter.cpp  test_iterable_traits.cpp  test_iterable_wrapper.cpp  test_itertools.cpp  test_main.cpp  test_map.cpp  test_range.cpp  test_repeat.cpp  test_rvalue_ref_to_array.cpp  test_wrapper_base.cpp  test_zip.cpp
